--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -110,7 +110,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">My Story</h3>
+                <h3 class="mbr-section-title display-2">Film Portfolio</h3>
                 
                 <div><a class="btn btn-black" href="https://youtu.be/iaZ8ppGLErk" target="_blank">Click Here</a></div>
             </div>
