--- a/illustrator.html
+++ b/illustrator.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -230,7 +230,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/vw-logo-2-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/aruba-postcard-2-2000x20007.jpg">
+                            <img alt="" src="assets/images/aruba-postcard-2-2000x200011.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/doodle-for-google-website-2000x2000-1.jpg">
                         </div><div class="carousel-item">
@@ -304,7 +304,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="cEHtTq20fgR9ZGE7M1QqtmhOMD0U/27C4fk1ggqPjXUXpgzoXCGbu37MVokkKq3zUg0nLTmIBdjLzzXiFRnmIA5hunbP/dOGcBVjxmodAEd7wbHqdE2HDkNbtsWu0IHl" data-form-email="true">
+                    <input type="hidden" value="DQkebrAx0jAUJgPvPp1GW4ayUpHxQUHna01yEUf8MsalzxAt5eZECrwWrkrLVJtksND6oaYPD7q8wpGx2hHQIsxFBGb7pG4Qz1ZpoS5vWUt7XsguRwhsc+bls4nfQd/O" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
